--- a/com.civicrm.hrjobroles/views/mainTemplate.html
+++ b/com.civicrm.hrjobroles/views/mainTemplate.html
@@ -1,9 +1,9 @@
-<section>
+<section class="job-roles">
   <div class="alert {{jobroles.message_type}}" ng-show="jobroles.message">
     {{jobroles.message}}
   </div>
 
-  <section>
+  <section class="job-roles__list">
     <div class="page-header page-header-primary" ng-show="jobroles.loading || jobroles.present_job_roles.length">
       <h2>Current Roles and Projects:</h2>
     </div>
@@ -15,7 +15,7 @@
       </ul>
     </crm-loading>
   </section>
-  <section ng-show="jobroles.past_job_roles.length">
+  <section class="job-roles__list" ng-show="jobroles.past_job_roles.length">
     <div class="page-header page-header-danger">
       <h2>Past Roles and Projects:</h2>
     </div>
