PCHR-1439: Fix description textarea size

--- a/com.civicrm.hrjobroles/scss/hrjobroles.scss
+++ b/com.civicrm.hrjobroles/scss/hrjobroles.scss
@@ -17,3 +17,10 @@
     position: relative;
   }
 }
+
+
+// workaround to make sure that the texarea always go full-width
+// the !important is necessary to override the #bootstrap-theme style
+.editable-textarea {
+  display: block !important;
+}
