AI-117: Fix find memberships - search actions - print selected rows issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -160,7 +160,7 @@
         padding: 12px 20px; 
       }
 
-      > tbody > td:last-child {
+      > tbody > tr > td:last-child {
         text-align: right;
       }
     }
