--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -285,10 +285,10 @@
                   </span>
                 </ul>
               </div>
+            <div class="chr_leave-request-files_upload" ng-disabled="$ctrl.isMode('view')">
               <div
                 nv-file-drop
                 uploader="$ctrl.request.fileUploader"
-                class="chr_leave-request-files_upload"
                 ng-disabled="$ctrl.isMode('view')"
                 ng-if="$ctrl.request.fileUploader && $ctrl.canUploadMore()">
                 <div class="chr_leave-request-files_upload_action row text-center">
@@ -303,20 +303,18 @@
                     <input
                       type="file"
                       nv-file-select
+                      ng-readonly="$ctrl.isMode('view')"
                       ng-disabled="$ctrl.isMode('view')"
                       uploader="$ctrl.request.fileUploader"
                       style="display:none;">
                   </label>
                 </div>
               </div>
-              <div ng-if="!$ctrl.canUploadMore()" class="chr_leave-request-files_upload">
-                <div class="chr_leave-request-files_upload_action row text-center">
-                  You can upload upto 10 files.
-                </div>
-                <div class="chr_leave-request-files_upload_action row text-center">
-                  The supported file extensions are txt, jpg, png, jpeg, bmp, gif, pdf, doc, docx, xls, xlsx, ppt, pptx.
-                </div>
+              <div class="chr_leave-request-files_upload_action row text-center text-warning">
+                You can upload up to 10 files. The supported file extensions are txt, jpg, png,
+                jpeg, bmp, gif, pdf, doc, docx, xls, xlsx, ppt, pptx.
               </div>
+            </div>
             </uib-tab>
           </uib-tabset>
         </div>
