--- a/com.civicrm.hrjobroles/views/mainTemplate.html
+++ b/com.civicrm.hrjobroles/views/mainTemplate.html
@@ -4,7 +4,7 @@
   </div>
 
   <section class="job-roles__list">
-    <div class="page-header page-header-primary" ng-show="jobroles.loading || jobroles.present_job_roles.length">
+    <div class="page-header page-header-primary" ng-show="jobroles.present_job_roles.length">
       <h2>Current Roles and Projects:</h2>
     </div>
     <crm-loading show="!jobroles.loading">
@@ -19,11 +19,13 @@
     <div class="page-header page-header-danger">
       <h2>Past Roles and Projects:</h2>
     </div>
-    <ul class="list-unstyled">
-      <li ng-repeat="job_roles_data in jobroles.past_job_roles"
-        ng-include src="jobroles.job_role_panel_url">
-      </li>
-    </ul>
+    <crm-loading show="!jobroles.loading">
+      <ul class="list-unstyled">
+        <li ng-repeat="job_roles_data in jobroles.past_job_roles"
+          ng-include src="jobroles.job_role_panel_url">
+        </li>
+      </ul>
+    </crm-loading>
   </section>
 
   <section>
