--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -370,7 +370,7 @@
     <div ng-repeat="errMsg in $ctrl.errors track by $index">{{errMsg}}</div>
   </div>
   <crm-loading show="!$ctrl.submitting">
-    <div class="modal-footer">
+    <div class="modal-footer chr_leave-request-modal__footer">
       <button
         type="button"
         class="btn btn-primary pull-left"
