--- a/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
@@ -1,3 +1,7 @@
+@import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/overrides/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
+
 //== Steps
 //
 //##
