AI-129: Fix standard search - table with pagination issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
@@ -24,7 +24,6 @@
   }
 
   .crm-pager {
-    background: $gray-lighter;
     margin: 0;
 
     > .element-right {
@@ -66,7 +65,7 @@
   #alpha-filter,
   .crm-search-tasks,
   .crm-selection-reset {
-    background: $gray-lighter !important;
+    background: $crm-white !important;
     padding: 15px 15px 5px !important;
   }
 
