--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -215,39 +215,37 @@
             <uib-tab heading="Files">
               <div>
                 <ul class="chr_leave-request-files_list container-fluid" ng-if="$ctrl.canShowFileList()">
-                  <li ng-repeat="file in $ctrl.request.files">
-                    <span ng-if="!file.toBeDeleted">
-                      <div class="chr_leave-request-files_meta">
-                        <span class="chr_leave-request-files_author">{{$ctrl.getCommentorName(file.contact_id)}}</span>
-                        <span>-</span>
-                        <span class="chr_leave-request-files_date">{{$ctrl.formatDateTime(file.upload_date)}}</span>
+                  <li ng-repeat="file in $ctrl.request.files | filter: {toBeDeleted: '!false'}">
+                    <div class="chr_leave-request-files_meta">
+                      <span class="chr_leave-request-files_author">{{$ctrl.getCommentorName(file.contact_id)}}</span>
+                      <span>-</span>
+                      <span class="chr_leave-request-files_date">{{$ctrl.formatDateTime(file.upload_date)}}</span>
+                    </div>
+                    <div class="row">
+                      <div class="chr_leave-request-files_icon text-primary col-xs-8">
+                        <i
+                          class="fa fa-file-o"
+                          ng-class="{
+                            'fa fa-file-pdf-o': file.mime_type == 'application/pdf',
+                            'fa fa-file-image-o': file.mime_type == 'image/png' || file.mime_type == 'image/jpeg' || file.mime_type == 'image/gif',
+                            'fa fa-file-excel-o': file.mime_type == 'application/excel',
+                            'fa fa-file-word-o': file.mime_type == 'application/msword'
+                            }"
+                          aria-hidden="true"></i>
+                        <span>{{file.name}}</span>
                       </div>
-                      <div class="row">
-                        <div class="chr_leave-request-files_icon text-primary col-xs-8">
-                          <i
-                            class="fa fa-file-o"
-                            ng-class="{
-                              'fa fa-file-pdf-o': file.mime_type == 'application/pdf',
-                              'fa fa-file-image-o': file.mime_type == 'image/png' || file.mime_type == 'image/jpeg' || file.mime_type == 'image/gif',
-                              'fa fa-file-excel-o': file.mime_type == 'application/excel',
-                              'fa fa-file-word-o': file.mime_type == 'application/msword'
-                              }"
-                            aria-hidden="true"></i>
-                          <span>{{file.name}}</span>
-                        </div>
-                        <div
-                          ng-show="$ctrl.removeAttachmentVisibility(file)"
-                          class="chr_leave-request-files_delete text-danger col-xs-4">
-                          <i class="fa fa-trash-o" aria-hidden="true"></i>
-                          <span
-                            class="btn btn-link"
-                            ng-disabled="$ctrl.isMode('view')"
-                            ng-click="$ctrl.removeAttachment('files', file)">
-                            Remove</span>
-                        </div>
+                      <div
+                        ng-show="$ctrl.removeAttachmentVisibility(file)"
+                        class="chr_leave-request-files_delete text-danger col-xs-4">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                        <span
+                          class="btn btn-link"
+                          ng-disabled="$ctrl.isMode('view')"
+                          ng-click="$ctrl.removeAttachment('files', file)">
+                          Remove</span>
                       </div>
-                      <hr/>
-                    </span>
+                    </div>
+                    <hr/>
                   </li>
                   <span ng-if="$ctrl.request.fileUploader" ng-disabled="$ctrl.isMode('view')">
                     <li ng-repeat="file in $ctrl.request.fileUploader.queue">
@@ -309,7 +307,7 @@
                   </div>
                 </div>
                 <div class="chr_leave-request-files_upload_action row text-warning" ng-if="$ctrl.canUploadMore() || $ctrl.userRemovedFile">
-                  You can upload up to 10 files. The supported file extensions are {{ $ctrl.supportedFileTypes }}.
+                  You can upload up to 10 files. The supported file extensions are {{ $ctrl.supportedFileTypes.join(', ') }}.
                 </div>
                 <div class="chr_leave-request-files_upload_action row text-warning text-center" ng-if="!($ctrl.canUploadMore() || $ctrl.userRemovedFile)">
                   You have reached the limit of 10 uploaded files.
