PCHR-1439: Move override of .editable-textarea style under .job-roles

--- a/com.civicrm.hrjobroles/css/hrjobroles.css
+++ b/com.civicrm.hrjobroles/css/hrjobroles.css
@@ -1,1 +1,1 @@
-.job-roles__list{margin-bottom:40px}.job-role__actions{position:absolute;right:0;top:5px}.job-role__tabs{position:relative}.editable-textarea{display:block !important}
+.job-roles__list{margin-bottom:40px}.job-roles .editable-textarea{display:block !important}.job-role__actions{position:absolute;right:0;top:5px}.job-role__tabs{position:relative}
